2007-02-20  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/shared/table_trackback.rhtml: Change: You can report to akismet via Ajax link.
	* donrails/app/controllers/login_controller.rb 
	(LoginController::akismet_report): Add to apply it.
	(LoginController::table_trackback_a): Add to apply it.

	* donrails/app/views/layouts/default/notes.rhtml: add "effects" and "controls" javascript link.

	* README.cache.ja: Add information to test caching.
	* donrails/app/views/login/manage_{category,trackback}.rhtml: Small fix

	* donrails/example/database-mysqltest.yml: New file
	* Makefile: Add "make mysqltest" (*TODO*)
	
2007-02-18  Akira TAGOH  <at@gclab.org>

	* Makefile: Make a symlink for test dir to be rake-test-ready.

	* donrails/tool/tables-postgresql.sql: set default value to
	notify_level.

	* donrails/tool/tables-mysql.sql: add notify_level to don_envs.

	* upgrade_1_6.mysql.sql, upgrade_1_6.postgresql.sql:
	correct default value for notify_level.

2007-02-18  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/functional/login_controller_test.rb (LoginControllerTest::test_edit_picture_{2,3,4}): New test.
	* donrails/app/controllers/login_controller.rb (LoginController::edit_picture): Small fix.

2007-02-16  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/rdf/{rdf,rss2}_{recent,enrollment}.rxml: Fix link.

	* donrails/app/controllers/login_controller.rb 
	(LoginController::akismet_report): Change: When you SPAM report to Akismet, trackback.spam is 1. To the contrary, When you HAM report to Akismet, trackback.spam is 0.
	(LoginController::delete_trackback): Change to apply, when you check/uncheck spam checkbox in manage_trackback.
	* donrails/test/functional/login_controller_test.rb (LoginControllerTest::test_delete_trackback): Change to check.
	* donrails/test/fixtures/trackbacks.yml (second_trackback): Add to apply these changes.

2007-02-16  Akira TAGOH  <at@gclab.org>

	* upgrade_1_6.postgresql.sql: correct constraint for don_rbls.
